# nav-raeo

./: Cargo.toml  README.md
crates/nav-raeo/: Cargo.toml
crates/nav-raeo/src/: main.rs
crates/nr-core/src/: window.rs
crates/nr-gtk/: Cargo.toml
crates/nr-gtk/src/: config.rs  lib.rs
crates/nr-gtk/src/object/: imp.rs
crates/nr-hyprland/src/: lib.rs
nav-raeo/: Cargo.toml
nr-core/: Cargo.toml
nr-core/src/: app.rs  window.rs
nr-gtk/: Cargo.toml
nr-gtk/src/: action.rs  main.rs  object.rs
nr-gtk/src/object/: imp.rs
nr-hyprland/: Cargo.toml
nr-hyprland/src/: lib.rs
