[workspace]
resolver = "2"
members = [ "nav-raeo", "nr-core","nr-gtk", "nr-hyprland"]

[workspace.dependencies]
anyhow = { version = "1.0.95" }
fuzzy-matcher = { version = "0.3.*" }
gtk = { version = "0.9.5", package = "gtk4", features = ["v4_16"]}
hyprland = { version = "0.4.0-beta.2" }
nr-core = { path = "nr-core" }
nr-hyprland = { path = "nr-hyprland" }
nr-gtk = { path = "nr-gtk" }
