[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
anyhow = { version = "1.0.95" }
directories = { version = "5" }
env_logger = { version = "0.11.*" }
fuzzy-matcher = { version = "0.3.*" }
gtk = { version = "=0.9.5", package = "gtk4", features = ["v4_16"]}
hyprland = { version = "0.4.0-beta.2" }
log = { version = "0.4.*" }
nr-core = { path = "./crates/nr-core" }
nr-hyprland = { path = "./crates/nr-hyprland" }
nr-gtk = { path = "./crates/nr-gtk" }
